// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentScanner aborts scanning when requested 1`] = `
[
  "$.a11yCheck",
  "$.a11yCheckingModeHeader",
  "$.a11yRetry",
  "$.a11yShowSolution",
  "$.answerIsCorrect",
  "$.answerIsWrong",
  "$.answeredCorrectly",
  "$.answeredIncorrectly",
  "$.behaviour",
  "$.checkAnswer",
  "$.confirmCheck",
  "$.confirmRetry",
  "$.confirmRetry.body",
  "$.confirmRetry.cancelLabel",
  "$.confirmRetry.confirmLabel",
  "$.confirmRetry.header",
  "$.inputHasTipLabel",
  "$.inputLabel",
  "$.media",
  "$.notFilledOut",
  "$.overallFeedback",
  "$.overallFeedback[0]",
  "$.overallFeedback[0].feedback",
  "$.overallFeedback[0].from",
  "$.overallFeedback[0].to",
  "$.questions",
  "$.questions[0]",
  "$.questions[1]",
  "$.questions[2]",
  "$.scoreBarLabel",
  "$.showSolutions",
  "$.solutionLabel",
  "$.submitAnswer",
  "$.text",
  "$.tipLabel",
  "$.tryAgain",
]
`;

exports[`ContentScanner scans the semantic structure of H5P.Blanks example 1`] = `
[
  "$.a11yCheck",
  "$.a11yCheckingModeHeader",
  "$.a11yRetry",
  "$.a11yShowSolution",
  "$.answerIsCorrect",
  "$.answerIsWrong",
  "$.answeredCorrectly",
  "$.answeredIncorrectly",
  "$.behaviour",
  "$.behaviour.acceptSpellingErrors",
  "$.behaviour.autoCheck",
  "$.behaviour.caseSensitive",
  "$.behaviour.confirmCheckDialog",
  "$.behaviour.confirmRetryDialog",
  "$.behaviour.enableCheckButton",
  "$.behaviour.enableRetry",
  "$.behaviour.enableSolutionsButton",
  "$.behaviour.separateLines",
  "$.behaviour.showSolutionsRequiresInput",
  "$.checkAnswer",
  "$.confirmCheck",
  "$.confirmCheck.body",
  "$.confirmCheck.cancelLabel",
  "$.confirmCheck.confirmLabel",
  "$.confirmCheck.header",
  "$.confirmRetry",
  "$.confirmRetry.body",
  "$.confirmRetry.cancelLabel",
  "$.confirmRetry.confirmLabel",
  "$.confirmRetry.header",
  "$.inputHasTipLabel",
  "$.inputLabel",
  "$.media",
  "$.media.disableImageZooming",
  "$.media.type",
  "$.media.type.params.alt",
  "$.media.type.params.contentName",
  "$.media.type.params.decorative",
  "$.media.type.params.file",
  "$.media.type.params.title",
  "$.notFilledOut",
  "$.overallFeedback",
  "$.overallFeedback[0]",
  "$.overallFeedback[0].feedback",
  "$.overallFeedback[0].from",
  "$.overallFeedback[0].to",
  "$.questions",
  "$.questions[0]",
  "$.questions[1]",
  "$.questions[2]",
  "$.scoreBarLabel",
  "$.showSolutions",
  "$.solutionLabel",
  "$.submitAnswer",
  "$.text",
  "$.tipLabel",
  "$.tryAgain",
]
`;
